force-app/main/default/objects/DRL_CampaignInfluenceConfiguration__mdt/DRL_CampaignInfluenceConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Influence Configuration</label>
    <pluralLabel>Campaign Influence Configurations</pluralLabel>
</CustomObject>