force-app/main/default/objects/DRL_CampaignInfluenceConfiguration__mdt/fields/IsLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>IsLeadConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>