force-app/main/default/objects/DRL_CampaignInfluenceConfiguration__mdt/fields/OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageName__c</fullName>
    <label>Opportunity Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>