force-app/main/default/objects/DRL_CampaignInfluenceConfiguration__mdt/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>